added  callcacks changes

--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
-  "name": "node-patterns",
+  "name": "01-web-spider",
   "version": "1.0.0",
+  "engines": {
+    "node": ">=20"
+  },
+  "engineStrict": true,
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module"
+  "dependencies": {
+    "mkdirp": "^0.5.5",
+    "slug": "^1.1.0",
+    "superagent": "^5.2.2"
+  },
+  "devDependencies": {}
 }
